--- a/src/MyButton/MyButton.css
+++ b/src/MyButton/MyButton.css
@@ -2,7 +2,7 @@
     padding: 10px 5px;
     color: black;
     border: 1px solid black;
-    background: transparent;
+    background: yellow;
 }
 
 .big-btn {
